<resources>
    <string name="app_name">Animation</string>
    <string name="tween">tween</string>>
    <string name="FrameAnim">frameanim</string>
    <string name="interpolator">interpolator</string>
    <string name="ObjectAnim">objectanim</string>

    <string name="AlphaAnimation">alpha</string>
    <string name="TranslateAnimation">translate</string>
    <string name="ScaleAnimation">scale</string>
    <string name="RotateAnimation">rotate</string>

    <string name="love">love</string>

    <string name="together">together</string>
    
    <string name="Timer">timer</string>
    
    <string name="Calculator">calculator</string>

    <string name="AccelerateDecelerate">acceleratedecelerate</string>
    <string name="Overshoot">overshoot</string>
    <string name="Cycle">cycle</string>
    <string name="Anticipate">anticipate</string>

    <string name="AddView">add_view</string>
    <string name="LayoutAnimator">layout_animator</string>

    <string name="begin">begin</string>
    <string name="end">end</string>
</resources>
