<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    android:background="@color/DarkBackground"
    tools:context="org.nicehiro.animation.MainActivity">

    <TableRow>

        <Button
            android:id="@+id/tween"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tween"/>
        <Button
            android:id="@+id/framAnim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FrameAnim"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/interpolator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interpolator"/>

        <Button
            android:id="@+id/object_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ObjectAnim"/>

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/layout_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LayoutAnimator"/>

    </TableRow>
</TableLayout>
